--- a/10_type-transform/style.css
+++ b/10_type-transform/style.css
@@ -8,8 +8,24 @@ input {
   margin-right: 10px !important;
 }
 
-.error {}
+.full__name {
+  width: 250px !important;
+}
 
-.error {
-  margin-right: 10px;
+.faculty {
+  width: 230px !important;
+}
+
+.date__birth {
+  width: 150px;
+}
+
+.date__start-training {
+  width: 170px !important;
+}
+
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
