--- a/10_type-transform/style.css
+++ b/10_type-transform/style.css
@@ -1,31 +1,4 @@
 #formWrapper {
-  display: flex;
-  justify-content: center;
-  padding-top: 35px;
-}
-
-input {
-  margin-right: 10px !important;
-}
-
-.full__name {
-  width: 250px !important;
-}
-
-.faculty {
-  width: 230px !important;
-}
-
-.date__birth {
-  width: 150px;
-}
-
-.date__start-training {
-  width: 170px !important;
-}
-
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+    display: flex;
+    justify-content: space-between;
 }
