--- a/10_type-transform/style.css
+++ b/10_type-transform/style.css
@@ -1,3 +1,11 @@
-.form .full__name {
-    width: 100%;
+.form-label {
+    margin: 0;
+}
+
+.mb-3 {
+    margin: 0!important;
+}
+
+#btnSub {
+    margin-top: 20px;
 }
