--- a/10_type-transform/style.css
+++ b/10_type-transform/style.css
@@ -4,5 +4,18 @@
 }
 
 .mb-3 {
-    margin-bottom: 25px !important;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    margin: 25px !important;
+}
+
+.input-group>.form-control {
+    width: 100%;
+}
+
+.label {
+    position: absolute;
+    top: -22px;
+    color: red;
 }
