--- a/10_type-transform/style.css
+++ b/10_type-transform/style.css
@@ -7,7 +7,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    margin: 25px !important;
+    margin-bottom: 25px !important;
 }
 
 .input-group>.form-control {
@@ -18,4 +18,8 @@
     position: absolute;
     top: -22px;
     color: red;
+}
+
+.form__table {
+    display: flex;
 }
