--- a/10_type-transform/style.css
+++ b/10_type-transform/style.css
@@ -1,4 +1,5 @@
-#formWrapper {
+#formWrapper,
+#filter {
     padding-top: 25px;
     width: 21%;
 }
@@ -12,12 +13,6 @@
 
 .input-group>.form-control {
     width: 100%;
-}
-
-span {
-    position: absolute;
-    top: -22px;
-    color: red;
 }
 
 .form__table {
@@ -43,4 +38,20 @@ td {
 #errorsWrapper {
     margin-bottom: 15px;
     color: red;
+}
+
+#filter {
+    margin-left: 200px;
+}
+
+#filter>input {
+    width: 100%;
+}
+
+#filter>input {
+    margin-bottom: 15px;
+}
+
+.title {
+    font-size: 22px;
 }
