--- a/11_client-server/blog-server/style.css
+++ b/11_client-server/blog-server/style.css
@@ -28,3 +28,11 @@ body {
     background-color: #e7e7e7;
     border: 1.5px solid #000000;
 }
+
+.number-page {
+    margin-bottom: 10px;
+}
+
+.active {
+    background-color: red;
+}
