--- a/11_client-server/blog-server/style.css
+++ b/11_client-server/blog-server/style.css
@@ -36,3 +36,35 @@ body {
 .active {
     background-color: red;
 }
+
+.post-link {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+}
+
+.card {
+    position: relative;
+    transition: all 0.5s ease;
+}
+
+.card:hover {
+    background-color: rgb(180, 180, 180);
+}
+
+.card1 {
+    justify-content: space-between;
+    margin-bottom: 15px;
+    background-color: #e7e7e7;
+    border: 1.5px solid #000000;
+    width: 100%;
+}
+
+.card-text {
+    font-size: 18px;
+}
+
+.post-item {
+    margin-top: 15px;
+}
