--- a/11_client-server/blog-server/style.css
+++ b/11_client-server/blog-server/style.css
@@ -68,3 +68,25 @@ body {
 .post-item {
     margin-top: 15px;
 }
+
+.paginatio {
+    display: flex;
+    flex-direction: row;
+    align-items: baseline;
+}
+
+.prev {
+    margin-right: 20px;
+}
+
+.next {
+    margin-left: 20px;
+}
+
+.number-page {
+    padding-right: 5px;
+}
+
+.last-page {
+    padding-left: 5px;
+}
